[tool.poetry]
name = "extra-thicc"
version = "0.1.0"
description = ""
authors = ["Michał Dziadowicz <michal@dziadowicz.it>"]
readme = "README.md"
packages = [{include = "extra_thicc.py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
