[tool.poetry]
name = "extra-thicc"
version = "0.1.0"
description = ""
authors = ["Michał Dziadowicz <michal@dziadowicz.it>"]
readme = "README.md"
license = "MIT"
keywords = ["extrathicc", "generator"]
classifiers = [
    "Environment :: Console"
]
packages = [{include = "extra_thicc.py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"

[tool.poetry.scripts]
make-extra-thicc = 'extra_thicc:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
